Fixed the weird scrollbar CSS bug on autocleared elements.

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -53,7 +53,7 @@ form dd { margin: 0 0 1.5em; }
 
 
 
-*.autoclear { overflow: auto; }
+*.autoclear { overflow: hidden; }
 
 *.invisible {
 	border: 0;
